tools/analysis/test/cluster/ingress-invalid-shape/cluster-dump/ingress-nginx/ingress-controller-ingress-nginx-defaultbackend-56c5fbc6b85wvn7/logs.txt
==== START logs for container istio-init of pod ingress-nginx/ingress-controller-ingress-nginx-defaultbackend-56c5fbc6b85wvn7 ====
2022-06-03T03:38:26.991754Z	info	Istio iptables environment:
ENVOY_PORT=
INBOUND_CAPTURE_PORT=
ISTIO_INBOUND_INTERCEPTION_MODE=
ISTIO_INBOUND_TPROXY_ROUTE_TABLE=
ISTIO_INBOUND_PORTS=
ISTIO_OUTBOUND_PORTS=
ISTIO_LOCAL_EXCLUDE_PORTS=
ISTIO_EXCLUDE_INTERFACES=
ISTIO_SERVICE_CIDR=
ISTIO_SERVICE_EXCLUDE_CIDR=
ISTIO_META_DNS_CAPTURE=
INVALID_DROP=

2022-06-03T03:38:26.991805Z	info	Istio iptables variables:
PROXY_PORT=15001
PROXY_INBOUND_CAPTURE_PORT=15006
PROXY_TUNNEL_PORT=15008
PROXY_UID=1337
PROXY_GID=1337
INBOUND_INTERCEPTION_MODE=REDIRECT
INBOUND_TPROXY_MARK=1337
INBOUND_TPROXY_ROUTE_TABLE=133
INBOUND_PORTS_INCLUDE=*
INBOUND_PORTS_EXCLUDE=15090,15021,8080,15020
OUTBOUND_IP_RANGES_INCLUDE=*
OUTBOUND_IP_RANGES_EXCLUDE=
OUTBOUND_PORTS_INCLUDE=
OUTBOUND_PORTS_EXCLUDE=
KUBE_VIRT_INTERFACES=
ENABLE_INBOUND_IPV6=false
DNS_CAPTURE=false
DROP_INVALID=false
CAPTURE_ALL_DNS=false
DNS_SERVERS=[],[]
OUTPUT_PATH=
NETWORK_NAMESPACE=
CNI_MODE=false
EXCLUDE_INTERFACES=

2022-06-03T03:38:26.992257Z	info	Writing following contents to rules file: /tmp/iptables-rules-1654227506991855672.txt18132497
* nat
-N ISTIO_INBOUND
-N ISTIO_REDIRECT
-N ISTIO_IN_REDIRECT
-N ISTIO_OUTPUT
-A ISTIO_INBOUND -p tcp --dport 15008 -j RETURN
-A ISTIO_REDIRECT -p tcp -j REDIRECT --to-ports 15001
-A ISTIO_IN_REDIRECT -p tcp -j REDIRECT --to-ports 15006
-A PREROUTING -p tcp -j ISTIO_INBOUND
-A ISTIO_INBOUND -p tcp --dport 15090 -j RETURN
-A ISTIO_INBOUND -p tcp --dport 15021 -j RETURN
-A ISTIO_INBOUND -p tcp --dport 8080 -j RETURN
-A ISTIO_INBOUND -p tcp --dport 15020 -j RETURN
-A ISTIO_INBOUND -p tcp -j ISTIO_IN_REDIRECT
-A OUTPUT -p tcp -j ISTIO_OUTPUT
-A ISTIO_OUTPUT -o lo -s REDACTED-IP4-ADDRESS/32 -j RETURN
-A ISTIO_OUTPUT -o lo ! -d REDACTED-IP4-ADDRESS/32 -m owner --uid-owner 1337 -j ISTIO_IN_REDIRECT
-A ISTIO_OUTPUT -o lo -m owner ! --uid-owner 1337 -j RETURN
-A ISTIO_OUTPUT -m owner --uid-owner 1337 -j RETURN
-A ISTIO_OUTPUT -o lo ! -d REDACTED-IP4-ADDRESS/32 -m owner --gid-owner 1337 -j ISTIO_IN_REDIRECT
-A ISTIO_OUTPUT -o lo -m owner ! --gid-owner 1337 -j RETURN
-A ISTIO_OUTPUT -m owner --gid-owner 1337 -j RETURN
-A ISTIO_OUTPUT -d REDACTED-IP4-ADDRESS/32 -j RETURN
-A ISTIO_OUTPUT -j ISTIO_REDIRECT
COMMIT
2022-06-03T03:38:26.992305Z	info	Running command: iptables-restore --noflush /tmp/iptables-rules-1654227506991855672.txt18132497
2022-06-03T03:38:27.006003Z	info	Writing following contents to rules file: /tmp/ip6tables-rules-1654227507005944614.txt682261927

2022-06-03T03:38:27.006065Z	info	Running command: ip6tables-restore --noflush /tmp/ip6tables-rules-1654227507005944614.txt682261927
2022-06-03T03:38:27.014108Z	info	Running command: iptables-save 
2022-06-03T03:38:27.023188Z	info	Command output: 
# Generated by iptables-save v1.4.21 on Fri Jun  3 03:38:27 2022
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
:ISTIO_INBOUND - [0:0]
:ISTIO_IN_REDIRECT - [0:0]
:ISTIO_OUTPUT - [0:0]
:ISTIO_REDIRECT - [0:0]
-A PREROUTING -p tcp -j ISTIO_INBOUND
-A OUTPUT -p tcp -j ISTIO_OUTPUT
-A ISTIO_INBOUND -p tcp -m tcp --dport 15008 -j RETURN
-A ISTIO_INBOUND -p tcp -m tcp --dport 15090 -j RETURN
-A ISTIO_INBOUND -p tcp -m tcp --dport 15021 -j RETURN
-A ISTIO_INBOUND -p tcp -m tcp --dport 8080 -j RETURN
-A ISTIO_INBOUND -p tcp -m tcp --dport 15020 -j RETURN
-A ISTIO_INBOUND -p tcp -j ISTIO_IN_REDIRECT
-A ISTIO_IN_REDIRECT -p tcp -j REDIRECT --to-ports 15006
-A ISTIO_OUTPUT -s REDACTED-IP4-ADDRESS/32 -o lo -j RETURN
-A ISTIO_OUTPUT ! -d REDACTED-IP4-ADDRESS/32 -o lo -m owner --uid-owner 1337 -j ISTIO_IN_REDIRECT
-A ISTIO_OUTPUT -o lo -m owner ! --uid-owner 1337 -j RETURN
-A ISTIO_OUTPUT -m owner --uid-owner 1337 -j RETURN
-A ISTIO_OUTPUT ! -d REDACTED-IP4-ADDRESS/32 -o lo -m owner --gid-owner 1337 -j ISTIO_IN_REDIRECT
-A ISTIO_OUTPUT -o lo -m owner ! --gid-owner 1337 -j RETURN
-A ISTIO_OUTPUT -m owner --gid-owner 1337 -j RETURN
-A ISTIO_OUTPUT -d REDACTED-IP4-ADDRESS/32 -j RETURN
-A ISTIO_OUTPUT -j ISTIO_REDIRECT
-A ISTIO_REDIRECT -p tcp -j REDIRECT --to-ports 15001
COMMIT
# Completed on Fri Jun  3 03:38:27 2022

==== END logs for container istio-init of pod ingress-nginx/ingress-controller-ingress-nginx-defaultbackend-56c5fbc6b85wvn7 ====
==== START logs for container ingress-nginx-default-backend of pod ingress-nginx/ingress-controller-ingress-nginx-defaultbackend-56c5fbc6b85wvn7 ====
==== END logs for container ingress-nginx-default-backend of pod ingress-nginx/ingress-controller-ingress-nginx-defaultbackend-56c5fbc6b85wvn7 ====
==== START logs for container istio-proxy of pod ingress-nginx/ingress-controller-ingress-nginx-defaultbackend-56c5fbc6b85wvn7 ====
2022-06-03T03:38:28.066732Z	info	FLAG: --concurrency="2"
2022-06-03T03:38:28.066768Z	info	FLAG: --domain="ingress-nginx.svc.cluster.local"
2022-06-03T03:38:28.066776Z	info	FLAG: --help="false"
2022-06-03T03:38:28.066810Z	info	FLAG: --log_as_json="false"
2022-06-03T03:38:28.066817Z	info	FLAG: --log_caller=""
2022-06-03T03:38:28.066823Z	info	FLAG: --log_output_level="default:info"
2022-06-03T03:38:28.066828Z	info	FLAG: --log_rotate=""
2022-06-03T03:38:28.066831Z	info	FLAG: --log_rotate_max_age="30"
2022-06-03T03:38:28.066835Z	info	FLAG: --log_rotate_max_backups="1000"
2022-06-03T03:38:28.066839Z	info	FLAG: --log_rotate_max_size="104857600"
2022-06-03T03:38:28.066843Z	info	FLAG: --log_stacktrace_level="default:none"
2022-06-03T03:38:28.066853Z	info	FLAG: --log_target="[stdout]"
2022-06-03T03:38:28.066857Z	info	FLAG: --meshConfig="./etc/istio/config/mesh"
2022-06-03T03:38:28.066861Z	info	FLAG: --outlierLogPath=""
2022-06-03T03:38:28.066864Z	info	FLAG: --proxyComponentLogLevel="misc:error"
2022-06-03T03:38:28.066868Z	info	FLAG: --proxyLogLevel="warning"
2022-06-03T03:38:28.066873Z	info	FLAG: --serviceCluster="istio-proxy"
2022-06-03T03:38:28.066878Z	info	FLAG: --stsPort="0"
2022-06-03T03:38:28.066885Z	info	FLAG: --templateFile=""
2022-06-03T03:38:28.066892Z	info	FLAG: --tokenManagerPlugin="GoogleTokenExchange"
2022-06-03T03:38:28.066903Z	info	FLAG: --vklog="0"
2022-06-03T03:38:28.066910Z	info	Version 1.13.2-f84f69d1028e874d568f2942c5bab5271fcdeda7-Clean
2022-06-03T03:38:28.067116Z	info	Proxy role	ips=[REDACTED-IP4-ADDRESS fe80::7c51:6cff:fe94:b689] type=sidecar id=ingress-controller-ingress-nginx-defaultbackend-56c5fbc6b85wvn7.ingress-nginx domain=ingress-nginx.svc.cluster.local
2022-06-03T03:38:28.067205Z	info	Apply proxy config from env {}

2022-06-03T03:38:28.068446Z	info	Effective config: binaryPath: /usr/local/bin/envoy
concurrency: 2
configPath: ./etc/istio/proxy
controlPlaneAuthPolicy: MUTUAL_TLS
discoveryAddress: istiod.istio-system.svc:15012
drainDuration: 45s
parentShutdownDuration: 60s
proxyAdminPort: 15000
serviceCluster: istio-proxy
statNameLength: 189
statusPort: 15020
terminationDrainDuration: 5s
tracing:
  zipkin:
    address: zipkin.istio-system:9411

2022-06-03T03:38:28.068478Z	info	JWT policy is third-party-jwt
2022-06-03T03:38:28.091481Z	info	CA Endpoint istiod.istio-system.svc:15012, provider Citadel
2022-06-03T03:38:28.091559Z	info	Using CA istiod.istio-system.svc:15012 cert with certs: var/run/secrets/istio/root-cert.pem
2022-06-03T03:38:28.091527Z	info	Opening status port 15020
2022-06-03T03:38:28.091693Z	info	citadelclient	Citadel client using custom root cert: var/run/secrets/istio/root-cert.pem
2022-06-03T03:38:28.110685Z	info	ads	All caches have been synced up in 48.105846ms, marking server ready
2022-06-03T03:38:28.111301Z	info	sds	SDS server for workload certificates started, listening on "etc/istio/proxy/SDS"
2022-06-03T03:38:28.111352Z	info	xdsproxy	Initializing with upstream address "istiod.istio-system.svc:15012" and cluster "Kubernetes"
2022-06-03T03:38:28.111339Z	info	sds	Starting SDS grpc server
2022-06-03T03:38:28.111929Z	info	starting Http service at REDACTED-IP4-ADDRESS:15004
2022-06-03T03:38:28.113935Z	info	Pilot SAN: [istiod.istio-system.svc]
2022-06-03T03:38:28.115865Z	info	Starting proxy agent
2022-06-03T03:38:28.115916Z	info	Epoch 0 starting
2022-06-03T03:38:28.115937Z	info	Envoy command: [-c etc/istio/proxy/envoy-rev0.json --restart-epoch 0 --drain-time-s 45 --drain-strategy immediate --parent-shutdown-time-s 60 --local-address-ip-version v4 --file-flush-interval-msec 1000 --disable-hot-restart --log-format %Y-%m-%dT%T.%fZ	%l	envoy %n	%v -l warning --component-log-level misc:error --concurrency 2]
2022-06-03T03:38:28.260971Z	info	cache	generated new workload certificate	latency=149.859845ms ttl=23h59m59.739046262s
2022-06-03T03:38:28.261011Z	info	cache	Root cert has changed, start rotating root cert
2022-06-03T03:38:28.261037Z	info	ads	XDS: Incremental Pushing:0 ConnectedEndpoints:0 Version:
2022-06-03T03:38:28.261115Z	info	cache	returned workload trust anchor from cache	ttl=23h59m59.738890744s
2022-06-03T03:38:28.788985Z	info	xdsproxy	connected to upstream XDS server: istiod.istio-system.svc:15012
2022-06-03T03:38:29.074429Z	info	ads	ADS: new connection for node:ingress-controller-ingress-nginx-defaultbackend-56c5fbc6b85wvn7.ingress-nginx-1
2022-06-03T03:38:29.074596Z	info	cache	returned workload trust anchor from cache	ttl=23h59m58.925412434s
2022-06-03T03:38:29.075114Z	info	ads	SDS: PUSH request for node:ingress-controller-ingress-nginx-defaultbackend-56c5fbc6b85wvn7.ingress-nginx resources:1 size:2.0kB resource:ROOTCA
2022-06-03T03:38:29.114908Z	info	ads	ADS: new connection for node:ingress-controller-ingress-nginx-defaultbackend-56c5fbc6b85wvn7.ingress-nginx-2
2022-06-03T03:38:29.115043Z	info	cache	returned workload certificate from cache	ttl=23h59m58.884965821s
2022-06-03T03:38:29.115296Z	info	ads	SDS: PUSH request for node:ingress-controller-ingress-nginx-defaultbackend-56c5fbc6b85wvn7.ingress-nginx resources:1 size:9.2kB resource:default
2022-06-03T03:38:30.629345Z	info	Readiness succeeded in 2.565297767s
2022-06-03T03:38:30.629876Z	info	Envoy proxy is ready
2022-06-03T04:11:33.142297Z	info	xdsproxy	connected to upstream XDS server: istiod.istio-system.svc:15012
2022-06-03T04:43:51.127581Z	info	xdsproxy	connected to upstream XDS server: istiod.istio-system.svc:15012
==== END logs for container istio-proxy of pod ingress-nginx/ingress-controller-ingress-nginx-defaultbackend-56c5fbc6b85wvn7 ====
